<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBrownColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAppTitle"
        android:layout_width="437dp"
        android:layout_height="86dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textNameInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textNameInput"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/PleaseEnterName"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAppTitle" />

    <Button
        android:id="@+id/buttonNameInput"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/EnterTXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameInput" />

    <ImageView
        android:id="@+id/imageViewPalette"
        android:layout_width="410dp"
        android:layout_height="299dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/palette" />

    <EditText
        android:id="@+id/editTextNameInput"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/NameTXT"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameInput"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>